Sound is Fixed up now

--- a/OC/config.plist
+++ b/OC/config.plist
@@ -224,7 +224,7 @@
 				<key>hda-gfx</key>
 				<string>onboard-1</string>
 				<key>layout-id</key>
-				<data>AgAAAA==</data>
+				<data>BAAAAA==</data>
 				<key>model</key>
 				<string>8 Series/C220 Series Chipset High Definition Audio Controller</string>
 			</dict>
