--- a/CLOVER/config.plist
+++ b/CLOVER/config.plist
@@ -104,7 +104,7 @@
 				<key>FixTMR</key>
 				<false/>
 				<key>AddPNLF</key>
-				<false/>
+				<true/>
 				<key>Comment-IRQ Fix</key>
 				<string>The following fixes may be needed for onboard audio/USB/etc</string>
 				<key>FixIPIC</key>
@@ -339,34 +339,34 @@
 		<key>#AddProperties</key>
 		<array>
 			<dict>
-				<key>Comment</key>
-				<string>hda-gfx=onboard-1 for HDMI audio</string>
-				<key>Value</key>
-				<data>b25ib2FyZC0xAA==</data>
-				<key>Key</key>
-				<string>hda-gfx</string>
 				<key>Device</key>
 				<string>IntelGFX</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>hda-gfx=onboard-1 for HDMI audio</string>
 				<key>Value</key>
 				<data>b25ib2FyZC0xAA==</data>
+				<key>Comment</key>
+				<string>hda-gfx=onboard-1 for HDMI audio</string>
 				<key>Key</key>
 				<string>hda-gfx</string>
-				<key>Device</key>
-				<string>HDA</string>
 			</dict>
 			<dict>
-				<key>Comment</key>
-				<string>layout-id=3</string>
-				<key>Value</key>
-				<data>AwAAAA==</data>
-				<key>Key</key>
-				<string>layout-id</string>
 				<key>Device</key>
 				<string>HDA</string>
+				<key>Value</key>
+				<data>b25ib2FyZC0xAA==</data>
+				<key>Comment</key>
+				<string>hda-gfx=onboard-1 for HDMI audio</string>
+				<key>Key</key>
+				<string>hda-gfx</string>
+			</dict>
+			<dict>
+				<key>Device</key>
+				<string>HDA</string>
+				<key>Value</key>
+				<data>AwAAAA==</data>
+				<key>Comment</key>
+				<string>layout-id=3</string>
+				<key>Key</key>
+				<string>layout-id</string>
 			</dict>
 			<dict>
 				<key>Key</key>
